--- a/blog/templates/blog/master.html
+++ b/blog/templates/blog/master.html
@@ -15,9 +15,17 @@
               {% endblock %}
           </div>
           <div class="col-md-4">
-              <h3>Muvalab Blog</h3>
-              <p>This is our sidebar</p>
+              <h3 class="page-header">Muvalab Blog</h3>
+              <p><a href="{% url "blog:post_feed" %}" target="_blank">Subscribe to RSS Feed</a></p>
           </div>
+      <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9&appId=462199294128934";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
       </div>
   </div>
 </body>
