--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -6,8 +6,9 @@
    <h2 class="page-header">Recents Posts</h2>
     {% for post in posts %}
        <h3><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h3>
-        <p class="small">Published {{ post.publish }} by {{ post.author }}</p>
+        <p class="small" style="color: #777777">Published {{ post.publish }} by {{ post.author }}</p>
         <p>{{ post.body|truncatewords:25|linebreaks }}</p>
     {% endfor %}
-    
+
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
